_less/screen.less
/* ... */
.toc div.scroll{
	position:fixed;
}
.toc ul,
.toc li{
	list-style:none;
	padding:0;
	margin:0;
}
.toc ul{
	width:220px;
	border-right:1px solid #e0e0e0;
	padding:0 20px 0 0;
}
.toc ul li ul{
	position:relative;
	top:0;
	padding:10px 0 0 0;
	border:0;
	display:none;
}
.toc ul li:hover ul,
.toc ul li.active ul{
	display:block;
}
.toc ul li{
	padding:0 0 10px 0;
}
.toc ul li ul li{
	padding:0 0 4px 0;
}
.toc ul li ul li ul li{
	padding-left:10px;
}
.toc ul li a{
	padding-left:20px;
	font-weight:bold;
}
.toc ul li ul li a{
	font-weight:normal;
}
.toc ul li ul li a:hover:before,
.toc ul li ul li a.active:before{
	content:">";
	position:absolute;
	font-weight:bold;
	left:0px;
}
.toc a,
.toc a:link,
.toc a:active,
.toc a:visited{
	display:block;
	text-decoration:none;
	line-height:1.5em;
}
.toccontent{
	width:600px;
	margin:auto 0 auto auto;
	position:relative;
}
.toccontent h2{
	font-size:150%;
}
.toccontent h3{
	font-size:130%;
}
.toccontent h4{
	font-size:110%;
}

.box{
	border:2px dashed #4892b2;
	padding:0 20px 0 20px;
}
.boxexpand{
	overflow:hidden;
}
.boxexpand>*{
	display:none;
}
.boxexpand>h3:first-child{
	display:block;
	margin:20px 0;
}
.boxexpand>h3:first-child a:link,
.boxexpand>h3:first-child a:visited,
.boxexpand>h3:first-child a:active{
	text-decoration:none;
}

.titlelight{
	color:#8c8c8c;
}

.tablehalf{
	width:885px;
	position:relative;
	left:-40px;
}
.tablehalf div{
	display:inline-block;
	width:400px;
	vertical-align:top;
	margin-left:40px;
	margin-bottom:20px;
}
.tablehalf img{
	width:400px;
	height:220px;
	-webkit-border-radius:10px;
	-moz-border-radius:10px;
	border-radius:10px;
}
.tablehalf h2 img{
	width:auto;
	height:auto;
}
.tablehalf p{
	text-align:left;
}

.contributors{
	width:890px;
	text-align:left;
}
.contributors span a{
	font-size:80%;
}
.contributors span{
	padding:6px 0;
	width:170px;
	overflow:hidden;
	display:inline-block;
}

.resources{
	text-align:left;
}
.resources>div{
	border-top:1px solid #e0e0e0;
}
.resources>div:first-child{
	border-top:0;
}
.resources div div{
	display:inline-block;
	width:380px;
	vertical-align:top;
	padding:10px 0 25px 0;
	min-height:200px;
}
.resources>div>div:first-child{
	padding-right:40px;
	border-right:1px solid #e0e0e0;
}
.resources>div>div:first-child+div{
	padding-left:40px;
	border-left:1px solid #e0e0e0;
	margin-left:-1px;
}
.resources div div div{
	display:block;
	width:auto;
}
.resources p{
	font-size:115%;
	margin:6px 0;
}

.resourcesorg{
	margin-bottom:40px;
	text-align:left;
	font-size:0;
}
.resourcesorg div{
	border-top:1px solid #e0e0e0;
}
.resourcesorg div:first-child,.resourcesorg div div{
	border-top:0;
}
.resourcesorg div div{
	width:278px;
	font-size:16px;
	display:inline-block;
	vertical-align:top;
}
.resourcesorg img{
	margin-right:5px;
	width:24px;
	height:24px;
	position:relative;
	bottom:-6px;
}

.chatbox{
	text-align:center;
}

.devprojectlist{
	overflow:hidden;
}
.devprojectlist li{
	display:none;
}
.devprojectlist li:first-child,
.devprojectlist li:first-child+li,
.devprojectlist li:first-child+li+li,
.devprojectlist li:first-child+li+li+li{
	display:list-item;
}
.devprojectlist li.more{
	display:block;
}
.devprojectlist a{
	display:inline-block;
	margin-top:5px;
}

.floatimg{
	float:left;
	margin-right:10px;
}

.preview{
	margin-top:25px;
}
.previewcol{
	clear:both;
}
.previewcol .previewrow{
	padding-left:19px;
	padding-right:20px;
}
.previewcol .previewrow:first-child{
	padding-left:0;
}
.previewcol .previewrow:first-child+div{
	border-left:1px solid #ccc;
	border-right:1px solid #ccc;
}
.previewcol .previewrow:first-child+div+div{
	padding-right:0;
}
.previewrow{
	float:left;
	width:255px;
	text-align:left;
	position:relative;
}
.previewrow>h2{
	font-size:115%;
	margin-top:0;
}
.previewrow>p{
	font-size:95%;
}
.previewrow>div{
	display:inline-block;
	position:relative;
	margin-right:15px;
	margin-bottom:12px;
	vertical-align:top;
}
.previewrow>div:first-child+div+div,
.previewrow>div:first-child+div+div+div+div+div{
	margin-right:0;
}
.previewrow>div>a>img{
	display:block;
	margin:auto;
	margin-bottom:10px;
	width:72px;
	height:72px;
}
.previewrow>div>a,
.previewrow>div>a:visited,
.previewrow>div>a:link,
.previewrow>div>a:active{
	font-size:94%;
	text-align:center;
	text-decoration:none;
	font-weight:bold;
	width:72px;
	height:110px;
	display:inline-block;
	vertical-align:top;
	white-space:nowrap;
}
.previewrow>div>div{
	opacity:0;
	-moz-transition:opacity 400ms ease-out;
	-webkit-transition:opacity 400ms ease-out;
	transition:opacity 400ms ease-out;
	width:0;
	height:0;
	display:inline-block;
	position:absolute;
	left:-110px;
	right:-110px;
	bottom:100px;
	padding:0;
	z-index:1000;
	overflow:hidden;
}
.previewrow>div:hover>div{
	opacity:1;
	width:auto;
	height:auto;
}
.previewrow>div>div>div:first-child{
	background:url(/img/bubbletop.svg) bottom center no-repeat;
	height:10px;
}
.previewrow>div>div>div:first-child+div{
	background:url(/img/bubblemiddle.svg) bottom center repeat-y;
	padding:0 25px;
}
.previewrow>div>div>div:first-child+div+div{
	background:url(/img/bubblebottom.svg) bottom center no-repeat;
	height:64px;
}
.previewrow>div>div>div>span{
	position:absolute;
	top:24px;
	right:30px;
}
.previewrow>div>div>div>h2{
	margin:0;
	padding-top:10px;
	font-size:115%;
}
.previewrow>div>div>div>span>img{
	margin-left:4px;
}
.previewrow>div>div>div>h2:first-child+span+p{
	font-size:95%;
	margin:0;
	padding:10px 0;
}
.previewrow>div>div>div>h2:first-child+span+p+p{
	text-align:center;
	margin:0;
	padding:0;
	position:relative;
	bottom:-10px;
}
/* ... */

